# inspection-car

./: README.md
detectionProject/devel/: .catkin  .rosinstall
detectionProject/devel/include/camera_control_msgs/: SetBrightnessRequest.h
detectionProject/devel/include/serial_pkg/: KinematicData.h
detectionProject/devel/include/testboy/: person.h
detectionProject/devel/lib/pkgconfig/: camera_control_msgs.pc  pylon_camera.pc  ros_launch.pc  ros_qt_master.pc  serial_pkg.pc  testboy.pc  video_transportation.pc
detectionProject/devel/lib/pylon_camera/: pylon_camera_node  write_device_user_id_to_camera
detectionProject/devel/lib/python3/dist-packages/serial_pkg/msg/: _KinematicData.py  __init__.py
detectionProject/devel/lib/python3/dist-packages/testboy/msg/: _person.py
detectionProject/devel/lib/ros_qt_master/: config.ini  ros_qt_master
detectionProject/devel/lib/serial_pkg/: read_port_node
detectionProject/devel/lib/testboy/: testPublisher
detectionProject/devel/lib/video_transportation/: multiCam  myreceiver  myreceiver2  pubImage  publisher  receiver
detectionProject/devel/share/camera_control_msgs/cmake/: camera_control_msgs-msg-extras.cmake  camera_control_msgs-msg-paths.cmake  camera_control_msgsConfig.cmake
detectionProject/devel/share/common-lisp/ros/serial_pkg/msg/: KinematicData.lisp  _package.lisp  _package_KinematicData.lisp  serial_pkg-msg.asd
detectionProject/devel/share/common-lisp/ros/testboy/msg/: _package.lisp  _package_person.lisp  person.lisp  testboy-msg.asd
detectionProject/devel/share/pylon_camera/cmake/: pylon_cameraConfig.cmake
detectionProject/devel/share/ros_launch/cmake/: ros_launchConfig.cmake
detectionProject/devel/share/ros_qt_master/cmake/: ros_qt_masterConfig.cmake
detectionProject/devel/share/roseus/ros/camera_control_msgs/: manifest.l
detectionProject/devel/share/roseus/ros/serial_pkg/: manifest.l
detectionProject/devel/share/roseus/ros/testboy/: manifest.l
detectionProject/devel/share/serial_pkg/cmake/: serial_pkg-msg-paths.cmake  serial_pkgConfig.cmake
detectionProject/devel/share/testboy/cmake/: testboy-msg-paths.cmake  testboyConfig.cmake
detectionProject/devel/share/video_transportation/cmake/: video_transportationConfig.cmake
detectionProject/src/ros_launch/: CMakeLists.txt
detectionProject/src/ros_launch/launch/: reciver.launch
detectionProject/src/ros_qt_master/: CMakeLists.txt
detectionProject/src/ros_qt_master/include/ros_qt_master/: camera_configure_window.h  car_tracking.hpp  image_widget.h  main_window.hpp  node_cam_control.hpp  node_img_receive.hpp  node_msg_receive.hpp
detectionProject/src/ros_qt_master/src/: camera_configure_window.cpp  car_tracking.cpp  image_widget.cpp  main.cpp  main_window.cpp  node_cam_control.cpp  node_img_receive.cpp  node_msg_receive.cpp
detectionProject/src/ros_qt_master/ui/: camera_configure_window.ui  main_window_new.ui  main_window_v1.ui  main_window_v2.ui
detectionProject/src/serial_pkg/: CMakeLists.txt
detectionProject/src/serial_pkg/msg/: KinematicData.msg
detectionProject/src/serial_pkg/src/: read_data.cpp  test_sub.cpp
detectionProject/src/testboy/: CMakeLists.txt  package.xml
detectionProject/src/testboy/msg/: person.msg
detectionProject/src/testboy/src/: testPublisher.cpp
(+11 files in other folders)
